# pika-zoo

./: .gitignore  README.md  parallel_api_test.py  pyproject.toml  setup.py
pikazoo/: __init__.py  pikazoo_v0.py
pikazoo/env/: cloud_and_wave.py  physics.py  pikazoo_env.py  rand.py
pikazoo/wrappers/: __init__.py  convert_single_agent.py  normalize_observation.py  record_episode_statistics.py  reward_based_on_ball_position.py  reward_by_ball_position.py  reward_in_normal_state.py  simplify_action.py
tests/: test_parallel_api.py
tests/env/: test_env.py
