[tool.poetry]
name = "pika-zoo"
version = "0.1.0"
description = ""
authors = ["helpingstar <iamhelpingstar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pettingzoo = {extras = ["all"], version = "^1.24.2"}
gymnasium = "^0.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
